DDD News						-*- text -*-
********

DDD 3.3.2
=========

DDD 3.3.2 brings some minor bug fixes:

- Temporary sessions in Gnome and KDE are now properly deleted.
- The splash screen no longer bypasses all window controls.
- The Tip of the Day comes with an option to turn it off.
- Several memory leaks have been plugged (1).
- Major code clean-up (1).
- GCC 3.0 compiles DDD.

(1) Thanks to Arnaud Desitter <arnaud.desitter@nag.co.uk>!


DDD 3.3.1
=========

DDD 3.3.1 brings a couple of minor bug fixes:

- The option to create new displays `left-to-right' is restored upon startup.
- Fortran struct members are accessed as `A%B' instead of `A.B'.
- Certain structure changes in plotted displays no longer crash DDD.
- You can specify the top-level geometry via `-geometry'.
- The `pydb' debugger has been fixed to work with recent Python releases.
- Ornamented Perl debugger prompts are handled correctly.
- DDD honors the TMPDIR environment variable for creating temporary files.
- The `configure' script identifies recent hardware configurations.
- Minor compilation problems with GCC 2.7.2 have been fixed.
- Minor compilation problems with GCC 3.0 (prerelease) have been fixed.
- Minor compilation problems with Sun CC have been fixed.
- Minor potential problems with 64 bit pointers have been fixed.



DDD 3.3
=======

DDD 3.3 brings data themes, debugger interaction while the program is
running, support for JDB 1.2, and several bug fixes.


Data Themes
-----------

- DDD supports _data themes_ - modifiers that change the appearance of 
  program data.  Try `Data->Themes'.

- Data themes included with this release are:
  * Show specific expressions in a smaller font (useful for arrays).
  * Show display titles in a smaller font.
  * Suppress specific structure members or expressions.

- New data themes can be defined by users and installed at run-time.

- More themes are in preparation, such as rendering of C++ STL data structures.


Debuggers and Languages